--- a/Yeoman/app/index.html
+++ b/Yeoman/app/index.html
@@ -13,6 +13,8 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/play.css">
+    <link rel="stylesheet" href="styles/stats.css">
+    <link rel="stylesheet" href="styles/leaderboard.css">
     <!-- endbuild -->
   </head>
   <body ng-app="funwebregandit1App">
@@ -42,9 +44,9 @@
               <li><a href="#!/">LogIn</a></li>
               <li><a href="#!/">Home</a></li>
               <li><a ng-href="#!/play">Play !</a></li>
-              <li><a ng-href="#!/">My Stats</a></li>
-              <li><a ng-href="#!/">Leaderboard</a></li>
-              <li><a ng-href="#!/">About</a></li>
+              <li><a ng-href="#!/stats">My Stats</a></li>
+              <li><a ng-href="#!/leaderboard">Leaderboard</a></li>
+              <li><a ng-href="#!/about">About</a></li>
             </ul>
           </div>
         </div>
@@ -94,6 +96,8 @@
         <script src="scripts/controllers/play.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/leaderboard.js"></script>
+        <script src="scripts/controllers/stats.js"></script>
         <!-- endbuild -->
 </body>
 </html>
