--- a/Yeoman/app/index.html
+++ b/Yeoman/app/index.html
@@ -11,6 +11,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/play.css">
     <link rel="stylesheet" href="styles/stats.css">
