--- a/Yeoman/app/index.html
+++ b/Yeoman/app/index.html
@@ -1,3 +1,6 @@
+<script src="scripts/controllers/mystats.js"></script>
+<script src="scripts/controllers/login.js"></script>
+<script src="scripts/controllers/leaderboard.js"></script>
 <!doctype html>
 <html>
   <head>
@@ -5,30 +8,26 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/play.css">
-    <link rel="stylesheet" href="styles/stats.css">
+    <link rel="stylesheet" href="styles/mystats.css">
     <link rel="stylesheet" href="styles/leaderboard.css">
-    <!-- endbuild -->
+    <link rel="stylesheet" href="styles/main.css">
   </head>
+
+
+
+  <!-- Directiva ng-app este plasata in tag-ul body pentru auto-bootstrapping. Defineste root-ul aplicatiei -->
   <body ng-app="funwebregandit1App">
-    <!--[if lte IE 8]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+
 
     <!-- Add your site or application content here -->
-    <div class="header">
+    <!-- Div header  in care va fi afisat meniul-->
+    <span ng-controller="HeaderCtrl">
+    <div ng-if="getLocation() !== '/'" class="header" >
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
-
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
@@ -36,48 +35,43 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#!/">"Fun@Web"</a>
+            <a class="navbar-brand" href="#!/">Fun@Web</a>
           </div>
+
+
+
+
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
+            <!-- Lista cu view-uri la care se poate naviga -->
             <ul class="nav navbar-nav">
-              <li><a href="#!/">LogIn</a></li>
-              <li><a href="#!/">Home</a></li>
+              <!-- <li><a ng-href="#!/welcome">Home</a></li> -->
               <li><a ng-href="#!/play">Play !</a></li>
-              <li><a ng-href="#!/stats">My Stats</a></li>
+              <li><a ng-href="#!/mystats">My Stats</a></li>
               <li><a ng-href="#!/leaderboard">Leaderboard</a></li>
               <li><a ng-href="#!/about">About</a></li>
             </ul>
           </div>
+
+
+
+
+
+
+
+
         </div>
       </div>
     </div>
+    </span>
 
-    <div class="container">
+    <div class="container" style="height:100%">
     <div ng-view=""></div>
     </div>
 
-    <!-- <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div> -->
 
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
-
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
@@ -89,16 +83,15 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/play.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/leaderboard.js"></script>
-        <script src="scripts/controllers/stats.js"></script>
-        <!-- endbuild -->
-</body>
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/header.js"></script>
+    <script src="scripts/controllers/play.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/controllers/login.js"></script>
+
+
+  </body>
+
 </html>
